--- a/index.html
+++ b/index.html
@@ -3,18 +3,68 @@ layout: default
 ---
 
 <section>
+    <header class="sm-px3 px2 sm-pt3 pt2 sm-pb2 pb1 header card">
+      <h1 class="header-main mt0 my0">
+        #watanopie&nbsp;– Heimat, ein&nbsp;Ort der&nbsp;Utopie?
+      </h1>
+      <h2 class="header-sub mt1">
+        Eine&nbsp;Kampagne von Solidarigee&nbsp;e.V.
+      </h2>
+    </header>
+</section>
+
+
+<section class="mt4">
+
+  <header class="section-header mb2">
+    <h1 class="section-header-text">Autorenprofile</h1>
+  </header>
+
+  <div class="clearfix sm-mxn2">
+
+    {% for author in site.authors %}
+    
+    <div class="col md-col-4 sm-col-6 col-12 sm-p2 sm-mt0 mt3" id="author_{{ author.title }}">
+      <a href="{{ author.url | relative_url }}" class="no-link-style">
+        <div class="relative ratio-2-3 card">
+          {% if author.image %}
+          <div class="ratio-2-3-content rounded clickable-img bg-center bg-cover" 
+               style="background-image: url('{{ author.image | prepend: "assets/images/cropped/" | relative_url }}')"></div>
+          {% else %}
+          <div class="ratio-2-3-content rounded clickable-img bg-black">
+            <p class="h1 mx3 my4 center lowercase white">Foto unterwegs</p>
+          </div>
+          {% endif %}
+          <div class="center lowercase absolute bottom-0 right-0 left-0 py1 bg-darken-4 white rounded-bottom">
+            {{ author.name }}
+          </div>
+        </div>
+      </a>
+    </div>
+
+    {% endfor %}
+
+  </div>
+
+  {% comment %}
+  <!-- Does not apply anymore. -->
+  <footer class="flex items-center my2">
+    <div class="block flex-auto px2"><hr class="my0"></div>
+    <div class="lowercase">
+      <h1 class="h3 center mb0 mt0">Weitere Kunstwerke sind unterwegs.</h1>
+    </div>
+    <div class="block flex-auto px2"><hr class="my0"></div>
+  </footer>
+  {% endcomment %}
+
+</section>
+
+<section class="mt4">
+  <header class="section-header mb2">
+    <h1 class="section-header-text">Kampagnentext</h1>
+  </header>
 
   <article class="card">
-    <div class="sm-px3 px2 sm-pt3 pt2 sm-pb2 pb1 header rounded-top">
-      <header>
-        <h1 class="h1 lowercase mt0 my0 italic">
-          #watanopie&nbsp;– Heimat, ein&nbsp;Ort der&nbsp;Utopie?
-        </h1>
-        <h2 class="h2 lowercase mt0 italic">
-          Eine&nbsp;Kampagne von Solidarigee&nbsp;e.V.
-        </h2>
-      </header>
-    </div>
     <div class="sm-px3 px2 sm-pt3 pt2 sm-pb2 pb1">
     <div class="clearfix md-mxn2 mid-gray">
       <div class="md-block md-col md-col-6 md-px2 my0">
@@ -75,49 +125,3 @@ layout: default
 
 </section>
 
-<section class="mt4">
-
-  <header class="flex items-center mb2">
-    <div class="block flex-auto px2"><hr class="my0"></div>
-    <div><h1 class="h1 center lowercase my0">Autorenprofile</h1></div>
-    <div class="block flex-auto px2"><hr class="my0"></div>
-  </header>
-
-  <div class="clearfix sm-mxn2">
-
-    {% for author in site.authors %}
-    
-    <div class="col md-col-4 sm-col-6 col-12 sm-p2 sm-mt0 mt3" id="author_{{ author.title }}">
-      <a href="{{ author.url | relative_url }}" class="no-link-style">
-        <div class="relative ratio-2-3 card">
-          {% if author.image %}
-          <div class="ratio-2-3-content rounded clickable-img bg-center bg-cover" 
-               style="background-image: url('{{ author.image | prepend: "assets/images/cropped/" | relative_url }}')"></div>
-          {% else %}
-          <div class="ratio-2-3-content rounded clickable-img bg-black">
-            <p class="h1 mx3 my4 center lowercase white">Werk in Arbeit</p>
-          </div>
-          {% endif %}
-          <div class="center lowercase absolute bottom-0 right-0 left-0 py1 bg-darken-4 white rounded-bottom">
-            {{ author.artist }}
-          </div>
-        </div>
-      </a>
-    </div>
-
-    {% endfor %}
-
-  </div>
-
-  {% comment %}
-  <!-- Does not apply anymore. -->
-  <footer class="flex items-center my2">
-    <div class="block flex-auto px2"><hr class="my0"></div>
-    <div class="lowercase">
-      <h1 class="h3 center mb0 mt0">Weitere Kunstwerke sind unterwegs.</h1>
-    </div>
-    <div class="block flex-auto px2"><hr class="my0"></div>
-  </footer>
-  {% endcomment %}
-
-</section>
