--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@ layout: default
     </header>
 </section>
 
+<section class="mt4">
+  <article class="mt3 sm-px3 px2 sm-pt3 pt2 sm-pb2 pb1 card">  
+    <div class="clearfix md-mxn2 mid-gray">
+      <div class="md-block md-col md-col-6 md-px2 my0">
+        {{ site.data.campaign_intro.first_column | markdownify | hyphenate }}
+      </div>
+      <div class="md-block md-col md-col-6 md-px2 my0">
+        {{ site.data.campaign_intro.second_column | markdownify | hyphenate }}
+      </div>
+    </div>
+  </article>
+</section>
 
 <section class="mt4">
 
@@ -60,22 +72,6 @@ layout: default
 </section>
 
 <section class="mt4">
-  <header class="section-header mb2">
-    <h1 class="section-header-text">Kampagnentext</h1>
-  </header>
-
-  <article class="card">
-    <div class="sm-px3 px2 sm-pt3 pt2 sm-pb2 pb1">
-    <div class="clearfix md-mxn2 mid-gray">
-      <div class="md-block md-col md-col-6 md-px2 my0">
-        {{ site.data.campaign_intro.first_column | markdownify | hyphenate }}
-      </div>
-      <div class="md-block md-col md-col-6 md-px2 my0">
-         {{ site.data.campaign_intro.second_column | markdownify | hyphenate }}
-      </div>
-    </div>
-    </div>
-  </article>
   <article class="mt3 sm-px3 px2 sm-pt3 pt2 sm-pb2 pb1 card">  
     <h2 class="h2 lowercase mt0">
       {{ site.data.workshops_info.title }}
