Add uwais’ profile; add logos

--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@ layout: default
       </div>
       <div class="md-block md-col md-col-6 md-px2 my0">
         {{ site.data.workshops_info.second_column | markdownify | hyphenate }}
+        <img src="{{ "wassertor_medien.png" | prepend: "assets/images/" | relative_url }}" 
+           alt="Logo von Wassertor Medien"
+           class="col-4">
+        <img src="{{ "mgh.png" | prepend: "assets/images/" | relative_url }}" 
+           alt="Logo von Wassertor Medien"
+           class="col-4">
       </div>
     </div>
   </article>
