--- a/index.html
+++ b/index.html
@@ -81,31 +81,54 @@ layout: default
 </section>
 
 <section class="mt4">
-  <article class="sm-px3 px2 sm-pt3 pt2 sm-pb2 pb1 card">  
+  <div class="sm-px3 px2 sm-pt3 pt2 sm-pb2 pb1 card">  
     <h2 class="h2 lowercase mt0">
       {{ site.data.workshops_info.title }}
     </h2>
-    <div class="clearfix md-mxn2">
+    <article class="clearfix md-mxn2">
       <div class="md-block md-col md-col-6 md-px2 my0">
         {{ site.data.workshops_info.first_column | markdownify | hyphenate }}
         <!-- &shy; &nbsp; -->
       </div>
       <div class="md-block md-col md-col-6 md-px2 my0">
         {{ site.data.workshops_info.second_column | markdownify | hyphenate }}
-        
-        <div class="flex items-center justify-around">
-          <img src="{{ "wassertor_medien.png" | prepend: "assets/images/" | relative_url }}" 
-             alt="Logo von Wassertor Medien"
-             class="col-4">
-          <img src="{{ "mgh.png" | prepend: "assets/images/" | relative_url }}" 
-             alt="Logo von Wassertor Medien"
-             class="col-3">
-          <img src="{{ "kultur_macht_start.png" | prepend: "assets/images/" | relative_url }}" 
-             alt="Logo von Wassertor Medien"
-             class="col-3">
-        </div>
       </div>
-    </div>
-  </article>
+    </article>
+  </div>
 </section>
-
+<section class="mt4">
+  <div class="sm-px3 px2 flex flex-wrap items-end justify-around">
+    <img src="{{ "solidarigee_logo.png" | prepend: "assets/images/" | relative_url }}" 
+       alt="Logo von Solidarige e.V."
+       style="max-width: 12rem;"
+       class="px1 py2">
+    <img src="{{ "mgh.png" | prepend: "assets/images/" | relative_url }}" 
+       alt="Logo von Wassertor 48 e.V."
+       style="max-width: 8rem;"
+       class="px1 py2">
+    <img src="{{ "wassertor_medien.png" | prepend: "assets/images/" | relative_url }}" 
+       alt="Logo von Wassertor Medien"
+       style="max-width: 10rem;"
+       class="px1 py2">
+  </div>
+  <header class="section-header mb2">
+    <h3 class="section-header-text">Projektmacher</h3>
+  </header>
+  <div class="sm-px3 px2 flex flex-wrap items-end justify-around">
+    <img src="{{ "BfB_kultur_macht_stark.png" | prepend: "assets/images/" | relative_url }}" 
+       alt="Logo von Kultur macht stark"
+       style="max-width: 22rem;"
+       class="px1 py2">
+    <img src="{{ "tgd.png" | prepend: "assets/images/" | relative_url }}" 
+       alt="Logo der Türkischen Gemeinde Deutschland"
+       style="max-width: 8rem;"
+       class="px1 py2">
+    <img src="{{ "mein_land_logo.png" | prepend: "assets/images/" | relative_url }}" 
+       alt="Logo von Mein Land"
+       style="max-width: 8rem;"
+       class="px1 py2">
+  </div>
+  <header class="section-header mb2">
+    <h3 class="section-header-text">Förderer</h3>
+  </header>
+</section>
