Refine design of tweets and other things

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="card">
     <header class="px2 sm-px3 py2 sm-py3 header ">
       <h1 class="header-main mt0 mb0">
-        #watanopie&nbsp;– Heimat, ein&nbsp;Ort der&nbsp;Utopie?
+        #watanopie – Heimat, ein&nbsp;Ort der&nbsp;Utopie?
       </h1>
       <h2 class="header-sub mt1">
         Eine&nbsp;Kampagne von Solidarigee&nbsp;e.V.
@@ -15,7 +15,7 @@ layout: default
     <div class="video-container">
       <iframe width="560" 
         height="315" 
-        src="https://www.youtube.com/embed/HU3iSW6WTo8?modestbranding=1&controls=0&showinfo=0&rel=0" 
+        src="https://www.youtube.com/embed/IuV80wYRld0?modestbranding=1&controls=0&showinfo=0&rel=0" 
         frameborder="0" 
         allowfullscreen>
       </iframe>
