--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="card">
-    <header class="px2 sm-px3 py2 sm-py3 header ">
+    <header class="px2 sm-px3 py2 sm-py3 header rounded-top">
       <h1 class="header-main mt0 mb0">
         #watanopie – Heimat, ein&nbsp;Ort der&nbsp;Utopie?
       </h1>
@@ -42,11 +42,11 @@ layout: default
     <h1 class="section-header-text">Autorenprofile</h1>
   </header>
 
-  <div class="clearfix sm-mxn2">
+  <div class="clearfix mxn2">
 
     {% for author in site.authors %}
     
-    <div class="col md-col-4 sm-col-6 col-12 sm-p2 sm-mt0 mt3" id="author_{{ author.title }}">
+    <div class="col md-col-4 col-6 p2 sm-mt0 mt3" id="author_{{ author.title }}">
       <a href="{{ author.url | relative_url }}" class="no-link-style">
         <div class="relative ratio-2-3 card">
           {% if author.image %}
@@ -57,7 +57,7 @@ layout: default
             <p class="h1 mx3 my4 center lowercase white">Foto unterwegs</p>
           </div>
           {% endif %}
-          <div class="center lowercase absolute bottom-0 right-0 left-0 py1 bg-darken-4 white rounded-bottom">
+          <div class="absolute bottom-0 right-0 left-0 py1 gallery-item-label center caps bold rounded-bottom">
             {{ author.name }}
           </div>
         </div>
@@ -115,9 +115,13 @@ layout: default
     <h3 class="section-header-text">Projektmacher</h3>
   </header>
   <div class="sm-px3 px2 flex flex-wrap items-end justify-around">
-    <img src="{{ "BfB_kultur_macht_stark.png" | prepend: "assets/images/" | relative_url }}" 
+    <img src="{{ "kultur_macht_stark.png" | prepend: "assets/images/" | relative_url }}" 
        alt="Logo von Kultur macht stark"
-       style="max-width: 22rem;"
+       style="max-width: 8rem;"
+       class="px1 py2">
+     <img src="{{ "BfB.png" | prepend: "assets/images/" | relative_url }}" 
+       alt="Logo vom Bundesministerium für Bildung und Forschung"
+       style="max-width: 8rem;"
        class="px1 py2">
     <img src="{{ "tgd.png" | prepend: "assets/images/" | relative_url }}" 
        alt="Logo der Türkischen Gemeinde Deutschland"
