--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
     <div class="video-container">
       <iframe width="560" 
         height="315" 
-        src="https://www.youtube.com/embed/IuV80wYRld0?modestbranding=1&controls=0&showinfo=0&rel=0" 
+        src="https://www.youtube.com/embed/IuV80wYRld0?modestbranding=1&showinfo=0&rel=0" 
         frameborder="0" 
         allowfullscreen>
       </iframe>
